--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:migrate:reset": "npx prisma migrate reset",
     "prisma:migrate:dev": "npx prisma migrate dev",
     "prisma:dev:deploy": "npx prisma migrate deploy",
     "prisma:generate": "npx prisma generate",
     "prisma:studio": "npx prisma studio",
+    "prisma:seed": "npx prisma db seed",
     "prisma:setup": "npm run prisma:migrate:dev && npm run prisma:dev:deploy && npm run prisma:generate",
     "build": "nest build",
     "supabase:build": "npm i && npx nest build",
@@ -40,6 +42,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -80,5 +83,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
