--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.7.0",
+    "@supabase/supabase-js": "^2.39.1",
+    "bcrypt": "^5.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -42,6 +47,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
+    "@types/passport": "^1.0.16",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
