--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.7.0",
     "@supabase/supabase-js": "^2.39.1",
+    "base64-arraybuffer": "^1.0.2",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
