--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Rename this file to .env
-
-DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres?schema=public"
-DIRECT_URL="postgresql://postgres:postgres@localhost:54322/postgres?schema=public"
+PORT=5000
+NODE_ENV=development
+DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
+DIRECT_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
+SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_KEY="supabase_key"
+SUPABASE_ANON_KEY="supabase_anon_key"
