--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@prisma/client": "^5.7.0",
     "@supabase/supabase-js": "^2.39.1",
     "base64-arraybuffer": "^1.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
