--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.7.0",
     "@supabase/supabase-js": "^2.39.1",
     "bcrypt": "^5.1.1",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.7.0",
-    "nestjs-typeorm-paginate": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
