chore: added new values for email sending.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DIRECT_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
 SUPABASE_URL=http://127.0.0.1:54321
 SUPABASE_KEY="supabase_key"
 SUPABASE_ANON_KEY="supabase_anon_key"
+
+CLIENT_EMAIL='sender_email'
+CLIENT_PASSWORD='sender_password'
