--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.7.0",
     "@supabase/supabase-js": "^2.39.1",
+    "axios": "^1.6.5",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -57,7 +58,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.0",
     "source-map-support": "^0.5.20",
     "supabase": "^1.123.0",
     "supertest": "^6.1.3",
