--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +30,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@nestjs/cli": "^10.3.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -38,26 +40,24 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.8.0",
     "@supabase/supabase-js": "^2.39.1",
+    "@types/express": "^4.17.21",
     "base64-arraybuffer": "^1.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "bcrypt": "^5.1.1",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "qrcode": "^1.5.3",
     "prisma": "^5.7.0",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
-    "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/multer": "^1.4.11",
     "@types/node": "18.16.12",
