--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.3.2",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/core": "^10.3.3",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.8.0",
     "@supabase/supabase-js": "^2.39.1",
     "@types/express": "^4.17.21",
@@ -47,17 +49,19 @@
     "class-validator": "^0.14.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.8",
+    "npm-check-updates": "^16.14.17",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.7.0",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
     "@types/jest": "29.5.1",
     "@types/multer": "^1.4.11",
     "@types/node": "18.16.12",
