--- a/package.json
+++ b/package.json
@@ -73,11 +73,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "jest-mock-extended": "^3.0.5",
     "prettier": "^2.3.2",
     "prisma": "^5.8.0",
     "source-map-support": "^0.5.20",
     "supabase": "^1.123.0",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.4",
     "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
