choret: updated the values of the origin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "supabase:reset": "npx supabase db reset",
     "supabase:build": "npm i && npx nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start --watch",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
