--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.10",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.8",
     "npm-check-updates": "^16.14.17",
