feat: finished the logic of the price mechanics

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.8.0",
     "@supabase/supabase-js": "^2.39.1",
